--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "redux-thunk",
-  "version": "2.3.0",
+  "name": "@prodigos/redux-thunk",
+  "version": "2.3.1",
   "license": "MIT",
   "description": "Thunk middleware for Redux.",
   "repository": "github:reduxjs/redux-thunk",
